# rss-ai-news

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  my-crontab  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml
code/: .gitignore  README.md  main_ingest.py  main_publish.py  pyproject.toml  pytest.ini  requirements.txt
code/core/: __init__.py  bootstrap.py  config.py  crawler.py  database.py  settings.py
code/dtos/: __init__.py  dto.py
code/news_crawler/: ingest.py  publish.py
code/news_crawler/core/: __init__.py  bootstrap.py  config.py  database.py  settings.py
code/news_crawler/dtos/: dto.py
code/news_crawler/scripts/: reset_db.py
code/news_crawler/services/: crawler_service.py  email_service.py  publisher_service.py
code/news_crawler/utils/: logger.py
code/news_crawler/workers/: crawler_worker.py
code/scripts/: __init__.py  reset_db.py
code/services/: __init__.py  ai_service.py  crawler_service.py  email_service.py  publisher_service.py  report_service.py
code/test/: conftest.py  test_ai.py  test_feeds.py  test_infra.py
code/utils/: __init__.py  common.py  logger.py
code/workers/: __init__.py  crawler_worker.py
news_crawler/: __init__.py  __main__.py  ingest.py  publish.py
news_crawler/categories/: _example.toml  ai_ml_research.toml  epochal_global.toml  hotnews_cn.toml  math_research.toml  nettech_hardcore.toml
news_crawler/core/: __init__.py  bootstrap.py  category_config_loader.py  category_strategies.py  config.py  crawler.py  database.py  settings.py
news_crawler/dtos/: __init__.py
news_crawler/scripts/: reset_db.py
news_crawler/services/: __init__.py  ai_service.py  crawler_service.py  email_service.py  publisher_service.py  report_service.py  webhook_service.py
news_crawler/utils/: __init__.py  common.py
news_crawler/workers/: crawler_worker.py
tests/: README.md  README_zh-CN.md  conftest.py  test_ai.py  test_feeds.py  test_infra.py
