[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-crawler"
version = "0.1.0"
description = "Self-hosted news crawler + AI summarizer + GitHub Pages publisher"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "feedparser",
  "trafilatura",
  "sqlalchemy",
  "psycopg2-binary",
  "tenacity",
  "PyGithub",
  "lxml",
  "lxml_html_clean",
  "openai",
  "python-dotenv",
  "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]
dev = ["black", "ruff", "mypy", "pre-commit"]

[project.scripts]
news-crawler = "news_crawler.__main__:main"
news-crawler-ingest = "news_crawler.ingest:main"
news-crawler-publish = "news_crawler.publish:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["news_crawler*"]

[tool.setuptools.package-data]
news_crawler = ["categories/*.toml"]

[tool.black]
line-length = 100
target-version = ['py310']
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (we've already optimized)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["S101"]       # assert allowed in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
